--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
   "homepage": "https://github.com/tungpt247/webpack-started#readme",
   "devDependencies": {
     "babel-core": "6.7.6",
+    "babel-eslint": "6.0.2",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
+    "chai": "3.5.0",
     "eslint": "2.7.0",
     "eslint-config-airbnb": "6.2.0",
     "eslint-plugin-react": "4.3.0",
     "jshint": "2.9.1",
     "jshint-loader": "0.8.3",
+    "mocha": "2.4.5",
     "webpack": "1.12.15",
     "webpack-dev-server": "1.14.1",
     "webpack-merge": "0.10.0"
