--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "started",
     "node"
   ],
-  "author": "tungphan",
+  "author": "Tung Phan",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/tungpt247/webpack-started/issues"
@@ -25,9 +25,11 @@
   "homepage": "https://github.com/tungpt247/webpack-started#readme",
   "devDependencies": {
     "babel-core": "6.7.6",
-    "babel-eslint": "6.0.2",
+    "babel-eslint": "^6.0.2",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-react-hmre": "^1.1.1",
     "chai": "3.5.0",
     "eslint": "2.7.0",
     "eslint-config-airbnb": "6.2.0",
@@ -38,5 +40,10 @@
     "webpack": "1.12.15",
     "webpack-dev-server": "1.14.1",
     "webpack-merge": "0.10.0"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.9.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   }
 }
